clang/test/BSC/Negative/Method/Struct/struct_function_undeclared/struct_function_undeclared.cbs
// RUN: %clang_cc1 -verify %s

struct Foo {
  int a;
};

int getA() { // expected-note {{'getA' declared here}}
             // expected-note@-1 {{'getA' declared here}}
  return 1;
}

int main() {
  int (*fp)() = struct Foo::getA; // expected-error {{no member named 'getA' in 'struct Foo'; did you mean simply 'getA'?}}
  int (*fp1)() = &struct Foo::getA; // expected-error {{no member named 'getA' in 'struct Foo'; did you mean simply 'getA'?}}
  return 0;
}
